--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ nav a:hover, nav a.active {
 
 .domain {
     font-size: 2.0rem;
-    background: linear-gradient(to right, var(--text), var(--accent-light));
+    background: linear-gradient(to left, var(--text), var(--accent-light));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight: 400;
