--- a/style.css
+++ b/style.css
@@ -955,3 +955,22 @@ footer {
         font-size: 0.8rem;
     }
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Ratio 16:9 (9 / 16 = 0.5625) */
+  height: 0;
+  overflow: hidden;
+  margin: 0 auto; /* Permet de centrer le conteneur */
+  max-width: 800px; /* Optionnel: limite la largeur maximale sur grand écran */
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
